--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 crewai>=0.28.0
-crewai-tools>=0.2.0
-anthropic>=0.25.0
+crewai-tools>=0.12.0
+openai>=1.12.0
 python-dotenv>=1.0.0
 langchain>=0.1.0
-langchain-anthropic>=0.1.0
+langchain-openai>=0.0.5
